deployment/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trucking-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trucking-client
  template:
    metadata:
      labels:
        app: trucking-client
    spec:
      containers:
        - name: trucking-client
          image: eu.gcr.io/trucking-276308/trucking-client-image:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: trucking-client
spec:
  selector:
    app: trucking-client
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 31000
  type: NodePort
