deployment/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trucking-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trucking-server
  template:
    metadata:
      labels:
        app: trucking-server
    spec:
      containers:
        - name: trucking-server
          image: eu.gcr.io/trucking-276308/trucking-server-image:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: trucking-server
spec:
  selector:
    app: trucking-server
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
